Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13256

iOS: "replacing existing signature" is recognized as error instead of warning

    XMLWordPrintable

Details

    Description

      When starting an already built app again, the default is to "build before run", which runs xcodebuild again. This lets Xcode's codesign step warn about replacing the already existing signature:

          /usr/bin/codesign --force --sign 4EC3C478DDD79D61916DD6A47C07D1622A077D08 --entitlements /private/tmp/build-ios1--Debug/ios1.build/Debug-iphoneos/ios1.build/ios1.app.xcent /tmp/build-ios1--Debug/Debug-iphoneos/ios1.app
      /tmp/build-ios1--Debug/Debug-iphoneos/ios1.app: replacing existing signature
      

      Qt Creator wrongly recognizes this as a build error, and one needs to click away the combo box "qt creator sees some errors, do you still want to run your application?".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fawzi Fawzi Mohamed
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes