xcodeparser: detect replacing signature warning

The “replacing signature” warning of codesign is interpreted by the
LdParser as an error. Handle it in the xcodeparser.

Change-Id: Ic7e654d7d60a5030be309509d27080ab7cb3bd4f
Task-number: QTCREATORBUG-13256
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>